# django-live-translations

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml
docs/: admin.md  backends.md  configuration.md  editing.md  getting-started.md  how-it-works.md  import-export.md  index.md  permissions.md  troubleshooting.md  widget.md
docs/assets/: extra.css
example/: manage.py
example/config/: settings.py  settings_e2e_db.py  settings_e2e_po.py  urls.py  wsgi.py
example/demo/: forms.py  models.py  views.py
example/demo/migrations/: 0001_initial.py
example/demo/templates/demo/: _plurals.html  home.html
example/locale/cs/LC_MESSAGES/: django.mo  django.po
example/locale/en/LC_MESSAGES/: django.mo  django.po
src/live_translations/: __init__.py  admin.py  apps.py  conf.py  context_processors.py  history.py  importexport.py  middleware.py  models.py  resolver.py  services.py  strings.py  types.py  urls.py  views.py
src/live_translations/backends/: base.py  db.py  po.py
src/live_translations/migrations/: 0001_initial.py  0002_alter_translationentry_context_and_more.py  0003_translationentry_is_active.py  0004_translationhistory.py  0005_plural_support.py
src/live_translations/static/live_translations/: widget.css  widget.js
src/live_translations/templates/admin/live_translations/: change_list.html  export_form.html  import_form.html
src/live_translations/templatetags/: live_translations.py
tests/: backends.py  conftest.py  permissions.py  test_history.py  test_is_active.py  test_resolver.py  urls.py
tests/benchmarks/: conftest.py  test_overhead_ci.py  test_request.py
tests/e2e/: conftest.py  helpers.py  test_active_toggle.py  test_admin.py  test_attribute_translations.py  test_bulk_activate.py  test_delete_override.py  test_dom_updates.py  test_draft_languages.py  test_edge_cases.py  test_edit_mode.py  test_form_translations.py  test_hint_bar.py  test_history_panel.py  test_history_restore.py  test_html_content.py  test_html_validation.py  test_language_switching.py  test_modal_basics.py  test_modal_editing.py  test_permissions.py  test_persistence.py  test_plurals.py  test_preview_mode.py  test_save_flow.py  test_toast.py
tests/unit/: conftest.py  test_admin.py  test_apps.py  test_conf.py  test_db_backend.py  test_form_translations.py  test_history.py  test_importexport.py  test_is_active.py  test_middleware.py  test_po_backend.py  test_services.py  test_strings.py  test_templatetags.py  test_views.py
